# cookiecutter-drf

./: README.md
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  makefile  pyproject.toml  setup.cfg
